css/style.css
/* ... */
#gmailContact {
  width: 64px;
  height: auto;
}

#gmailContactUsername {
  font-family: "TikTok Font Regular", serif;
  padding-left: 25px; /* Adjust or remove as necessary for centering */
  font-size: 32px;
  color: white;
}



#contactCardThree {
  display: flex;
  flex-direction: row;
  justify-content: center; /* Center items horizontally */
  align-items: center; /* Center items vertically */
  margin-top: 50px;
  width: 100%; /* Adjust this as necessary */
}

#linkedInContact, #linkedInContactUsername, #runningWritingClickMeOne {
  /* No need for 'position: relative' if we're not positioning them absolutely */
  display: flex; /* Make these flex containers as well */
  justify-content: center; /* Center the content inside */
  align-items: center; /* Useful if these had multiple lines of text or content */
}

#linkedInContact {
  width: 64px;
  height: auto;
}

#linkedInContactUsername {
  font-family: "TikTok Font Regular", serif;
  padding-left: 25px; /* Adjust or remove as necessary for centering */
  font-size: 32px;
  color: white;
}


#footer{
  position: relative;
  width: 100%;
  height: 260px;
  background-color: #181818;
  border: 0;
  bottom: 0;
  left: 0;
  display: flex;
  flex-direction: column;
}
#footerContainer{
  position: relative;
  height: 85%;
  width: 80%;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
}
#aboutFooterButton, #projectsFooterButton, #contactFooterButton{
  margin-top: 15px;
  background-color: transparent;
  font-family: "TikTok Font Regular", serif;
  font-size: 18px;
  box-shadow: none;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
  color: white;
  text-decoration: none;
  width: fit-content;
  height: 10%;
  border-style: solid; /* Explicitly set the border style */
  border-width: 0; /* Explicitly set the border width */
  border-left: none; /* Remove left border */
  border-right: none; /* Remove right border */
}



#quoteFooter{
  font-family: "TikTok Font Regular", serif;
  width: fit-content;
  left: 50%;
  top: 10%;
  transform: translateX(-50%);
  position: relative;
  height: fit-content;
  color: #888888;
  font-size: 16px;
}

#createdByFooter{
  font-family: "TikTok Font Regular", serif;
  width: fit-content;
  left: 50%;
  top: 20%;
  transform: translateX(-50%);
  position: relative;
  height: fit-content;
  color: #888888;
  font-size: 16px;
}
*{
  outline: none !important;
}
/* ... */

